@@ -4,6 +4,7 @@ Revision history for DBIx::Class
           parser (Anders Nor Berle)
         - Refactored DBIx::Class::Schema::Versioned
         - Syntax errors from resultset components are now reported correctly
+        - sqltargs respected correctly in deploy et al.
 
 0.08010 2008-03-01 10:30
         - Fix t/94versioning.t so it passes with latest SQL::Translator
